[feat]: Novos métodos para geração de dados para lacunas.

--- a/notebooks/txt_to_csv_converter.ipynb
+++ b/notebooks/txt_to_csv_converter.ipynb
@@ -29,18 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a0379219",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bibliotecas importadas com sucesso!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9cafb554",
    "metadata": {},
    "outputs": [
@@ -66,8 +58,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diretório de origem: ../raw_data\n",
-      "Diretório de destino: ../converted_csv_data\n",
       "✓ Diretório ../raw_data encontrado\n"
      ]
     }
@@ -105,7 +95,11 @@
       "✓ Diretório ../converted_csv_data criado/encontrado com sucesso\n",
       "\n",
       "Conteúdo atual do diretório ../converted_csv_data:\n",
-      "  (vazio)\n"
+      "  - U.csv\n",
+      "  - Dir.csv\n",
+      "  - WS.csv\n",
+      "  - V.csv\n",
+      "  - W.csv\n"
      ]
     }
    ],
@@ -146,14 +140,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Função de conversão definida com sucesso!\n"
+      "Função de conversão atualizada - valores nulos serão salvos como 'NaN' no CSV!\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def convert_txt_to_csv(txt_file_path, csv_file_path):\n",
     "    \"\"\"\n",
     "    Converte um arquivo TXT com delimitador ';' para CSV com delimitador ','\n",
+    "    Trata valores ausentes para serem detectados como NaN pelo pandas\n",
     "    \n",
     "    Args:\n",
     "        txt_file_path (Path): Caminho para o arquivo TXT de origem\n",
@@ -163,20 +160,46 @@
     "        bool: True se a conversão foi bem-sucedida, False caso contrário\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        # Ler o arquivo TXT com delimitador ';'\n",
-    "        df = pd.read_csv(txt_file_path, sep=';', encoding='utf-8')\n",
+    "        # Lista abrangente de valores que devem ser interpretados como NaN\n",
+    "        na_values = ['', ' ', '  ', '\\t', '\\n', '\\r', \n",
+    "                     'N/A', 'NA', 'n/a', 'na', 'N/a', 'n/A',\n",
+    "                     'NULL', 'null', 'Null', 'None', 'none', 'NONE',\n",
+    "                     'NaN', 'nan', 'NAN', 'Nan',\n",
+    "                     '-', '--', '---', '____', '....',\n",
+    "                     '9999', '-9999', '999999', '-999999',\n",
+    "                     '999.9', '-999.9', '9999.9', '-9999.9',\n",
+    "                     '999.99', '-999.99', '9999.99', '-9999.99']\n",
     "        \n",
-    "        # Salvar como CSV com delimitador ','\n",
-    "        df.to_csv(csv_file_path, index=False, encoding='utf-8')\n",
+    "        # Ler o arquivo TXT com delimitador ';' e tratar valores ausentes\n",
+    "        df = pd.read_csv(txt_file_path, \n",
+    "                        sep=';', \n",
+    "                        encoding='utf-8',\n",
+    "                        na_values=na_values,\n",
+    "                        keep_default_na=True)\n",
+    "        \n",
+    "        # Garantir que células vazias sejam convertidas para NaN\n",
+    "        df = df.replace(['', ' ', '  '], np.nan)\n",
+    "        \n",
+    "        # Converter strings que representam valores ausentes em NaN\n",
+    "        df = df.replace(na_values, np.nan)\n",
+    "        \n",
+    "        # Verificar se há valores ausentes após a conversão\n",
+    "        missing_count = df.isna().sum().sum()\n",
+    "        total_cells = df.shape[0] * df.shape[1]\n",
+    "        missing_percentage = (missing_count / total_cells) * 100\n",
+    "        \n",
+    "        # Salvar como CSV com delimitador ',' e valores nulos como 'NaN'\n",
+    "        df.to_csv(csv_file_path, index=False, encoding='utf-8', na_rep='NaN')\n",
     "        \n",
     "        print(f\"✓ {txt_file_path.name} → {csv_file_path.name}\")\n",
+    "        print(f\"  └── {missing_count} valores NaN detectados ({missing_percentage:.2f}% do total)\")\n",
     "        return True\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"✗ Erro ao converter {txt_file_path.name}: {str(e)}\")\n",
     "        return False\n",
     "\n",
-    "print(\"Função de conversão definida com sucesso!\")"
+    "print(\"Função de conversão atualizada - valores nulos serão salvos como 'NaN' no CSV!\")"
    ]
   },
   {
@@ -189,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ab8d2828",
    "metadata": {},
    "outputs": [
@@ -228,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "eca3b6ae",
    "metadata": {},
    "outputs": [
@@ -237,23 +260,37 @@
      "output_type": "stream",
      "text": [
       "Iniciando conversão dos arquivos...\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "✓ V.txt → V.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
+      "✓ V.txt → V.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
       "✓ W.txt → W.csv\n",
+      "  └── 115011 valores NaN detectados (10.19% do total)\n",
+      "✓ W.txt → W.csv\n",
+      "  └── 115011 valores NaN detectados (10.19% do total)\n",
       "✓ WS.txt → WS.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
+      "✓ WS.txt → WS.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
       "✓ U.txt → U.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
+      "✓ U.txt → U.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
       "✓ Dir.txt → Dir.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
       "\n",
       "--- Resumo da Conversão ---\n",
       "✓ Conversões bem-sucedidas: 5\n",
       "✗ Conversões com erro: 0\n",
-      "📊 Total de arquivos processados: 5\n"
+      "Total de arquivos processados: 5\n",
+      "✓ Dir.txt → Dir.csv\n",
+      "  └── 132658 valores NaN detectados (11.76% do total)\n",
+      "\n",
+      "--- Resumo da Conversão ---\n",
+      "✓ Conversões bem-sucedidas: 5\n",
+      "✗ Conversões com erro: 0\n",
+      "Total de arquivos processados: 5\n"
      ]
     }
    ],
@@ -291,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d8eb4e02",
    "metadata": {},
    "outputs": [
@@ -302,11 +339,11 @@
       "=== VERIFICAÇÃO DOS RESULTADOS ===\n",
       "\n",
       "Arquivos CSV criados (5):\n",
-      "  - U.csv (6,663,827 bytes)\n",
-      "  - Dir.csv (5,887,718 bytes)\n",
-      "  - WS.csv (5,819,775 bytes)\n",
-      "  - V.csv (6,380,526 bytes)\n",
-      "  - W.csv (6,027,870 bytes)\n",
+      "  - U.csv (7,061,801 bytes)\n",
+      "  - Dir.csv (6,285,692 bytes)\n",
+      "  - WS.csv (6,217,749 bytes)\n",
+      "  - V.csv (6,778,500 bytes)\n",
+      "  - W.csv (6,372,903 bytes)\n",
       "\n",
       "--- Comparação de Estrutura ---\n",
       "\n",
@@ -320,7 +357,7 @@
       "2021/11/10 17:30:00     -1.53     -3.05     -3.24     -3.03     -3.25     -3.35     -3.49      -3.56      -3.70      -3.82      -3.92      -4.01      -4.05      -4.08      -4.23      -4.27      -4.37      -4.23      -4.39      -4.10      -4.10      -3.81      -3.89      -4.08      -4.34      -4.71\n",
       "2021/11/10 17:40:00     -0.99     -2.94     -4.04     -3.74     -4.31     -4.48     -4.51      -4.58      -4.54      -4.54      -4.51      -4.50      -4.50      -4.41      -4.29      -4.31      -3.99      -4.12      -3.92      -4.31      -4.12      -4.22      -4.12      -4.07      -4.49      -4.67\n",
       "\n",
-      "🎉 Conversão concluída! Todos os arquivos estão disponíveis em: ../converted_csv_data\n"
+      "Conversão concluída! Todos os arquivos estão disponíveis em: ../converted_csv_data\n"
      ]
     }
    ],
